Adding code quality checks